--- a/src/pages/Digital_Marketing.module.css
+++ b/src/pages/Digital_Marketing.module.css
@@ -799,7 +799,7 @@ width: 400px;
 }  
 }
 
-@media screen and (max-width:416px) {
+@media screen and (max-width:416px) and (min-width: 390px){
     *{
         /* color: blue; */
     }
@@ -858,6 +858,62 @@ margin-bottom: 60px;
    @keyframes moveUp2 {
     0%{top:0px;}
     100%{top:-800px; 
+    }   
+}  
+}
+
+@media screen and (max-width:389px) {
+    *{
+        /* color: blue; */
+    }
+     .container {
+        padding-top: 0 !important ;
+    }
+
+    .container h1 {
+        font-size: 2.2em !important;
+    }
+
+    .paragraphs {
+        padding: 20px 25px;
+        font-size: 1.1em;
+    }
+    :root{
+    --cardRefDim: 350px;
+    --lastTwo: -700px;
+
+}
+
+.firstTwo {
+    width: 100vw;
+}
+
+
+.lastFour {
+    grid-template-rows: 20%;
+}
+
+.cardThree img, .cardSix img,.cardTwo img, .cardOne img{
+width: 340px;
+height: 310px;
+margin-bottom: 60px;
+}
+.cardFive img, .cardFour img{
+width: 340px;
+height: 310px !important;
+margin-bottom: 20px;
+
+}
+
+
+@keyframes moveUp {
+    0%{transform:translateY(0px);}
+    100%{transform:translateY(-700px)}
+}
+
+   @keyframes moveUp2 {
+    0%{top:0px;}
+    100%{top:-700px; 
     }   
 }  
 }
